--- a/src/app/comics/subir-comics/subir-comics.component.html
+++ b/src/app/comics/subir-comics/subir-comics.component.html
@@ -1,43 +1,43 @@
 <div class="container">
   <form
     action="#"
-    #RegiForm="ngForm"
+    #ComicForm="ngForm"
     id="form-register"
     class="mt-4"
     method="POST"
-    (ngSubmit)="regisUser()"
+    (ngSubmit)="subirComic()"
     role="form"
   >
     <legend>Crea una cuenta</legend>
 
     <div class="mb-3">
-      <label for="nombre">Nombre:</label>
+      <label for="nombre">Titulo Comic:</label>
       <input
         type="text"
-        [(ngModel)]="regiUser.nombre"
+        [(ngModel)]="comics.titulo"
         #nameModel="ngModel"
         class="form-control"
-        id="nombre"
-        name="nombreUser"
-        placeholder="Nombre"
+        id="titulo"
+        name="tituloUser"
+        placeholder="Titulo"
         [ngClass]="validClasses(nameModel, 'is-valid', 'is-invalid')"
         required
       />
       <div class="invalid-feedback">Se requiere nombre</div>
     </div>
     <div class="mb-3">
-      <label for="imagen">Imagen:</label>
+      <label for="`portada"> Imagen Portada:</label>
       <input
         (change)="capturarFile($event)"
         required
-        [(ngModel)]="regiUser.imagen"
-        #imagenModel="ngModel"
-        [ngClass]="validClasses(imagenModel, 'is-valid', 'is-invalid')"
+        [(ngModel)]="comics.portada"
+        #portadaModel="ngModel"
+        [ngClass]="validClasses(portadaModel, 'is-valid', 'is-invalid')"
         type="file"
         required
         class="form-control"
-        id="imagen"
-        name="imagen"
+        id="portada"
+        name="portada"
       />
       <div class="invalid-feedback">Imagen Falla</div>
     </div>
@@ -45,37 +45,37 @@
       <img [src]="previsualizacion" width="400px" />
     </div>
     <div class="mb-3">
-      <label for="password">Contraseña:</label>
+      <label for="descripcion">Descripción:</label>
       <input
-        type="password"
+        type="text"
         required
-        [(ngModel)]="regiUser.password"
-        #passwordModel="ngModel"
-        [ngClass]="validClasses(passwordModel, 'is-valid', 'is-invalid')"
+        [(ngModel)]="comics.descripcion"
+        #descripcionModel="ngModel"
+        [ngClass]="validClasses(descripcionModel, 'is-valid', 'is-invalid')"
         class="form-control"
-        id="password"
-        name="password"
-        placeholder="Password"
+        id="descripcion"
+        name="descripcion"
+        placeholder="Descripción"
       />
       <div class="invalid-feedback">Se requiere Contraseña</div>
     </div>
+
     <div class="mb-3">
-      <label for="correo">Repite Contraseña:</label>
+      <label for="capitulo">Capitulo:</label>
       <input
-        type="password"
-        class="form-control"
+        type="text"
         required
-        [appPasswordvalidator]="regiUser.password"
-        [(ngModel)]="password2"
-        #passwordModel2="ngModel"
-        [ngClass]="validClasses(passwordModel2, 'is-valid', 'is-invalid')"
-        id="password2"
-        name="password2"
-        placeholder="Password"
+        [(ngModel)]="comics.capitulos"
+        #capituloModel="ngModel"
+        [ngClass]="validClasses(capituloModel, 'is-valid', 'is-invalid')"
+        class="form-control"
+        id="capitulo"
+        name="capitulo"
+        placeholder="Capitulo"
       />
-      <div class="invalid-feedback">Contraseña no coincide</div>
-      <div class="valid-feedback">Password correctos</div>
+      <div class="invalid-feedback">Se requiere Contraseña</div>
     </div>
+
 
     <img src="" alt="" id="imgPreview" class="img-thumbnail d-none" />
     <p class="text-danger" id="errorInfo"></p>
@@ -84,7 +84,7 @@
     >
     <button
       type="submit"
-      [disabled]="RegiForm.invalid"
+      [disabled]="ComicForm.invalid"
       class="btn btn-primary ms-2"
     >
       Crear Cuenta
