el id del comic ya funciona

--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -21,7 +21,7 @@
         <div class="invalid-feedback">Password es requerido</div>
       </div>
       <p class="text-danger" id="errorInfo"></p>
-      <a class="btn btn-secondary" [routerLink]="['/auth/register']" role="button">Create account</a>
+      <a class="btn btn-secondary" [routerLink]="['/auth/register']" role="button">Crear Cuenta</a>
 
       <button type="submit" class="btn btn-primary ms-2"  [disabled]="loginForm.invalid">
         Login
