--- a/src/app/auth/editar-perfil/editar-perfil.component.html
+++ b/src/app/auth/editar-perfil/editar-perfil.component.html
@@ -33,7 +33,7 @@
 
     <img src="" alt="" id="imgPreview" class="img-thumbnail d-none" />
     <p class="text-danger" id="errorInfo"></p>
-    <a class="btn btn-secondary" [routerLink]="['/comics']" role="button">Volver</a>
+    <a class="btn btn-secondary" [routerLink]="['/users/me']" role="button">Volver</a>
     <button type="submit" [disabled]="RegiForm.invalid" class="btn btn-primary ms-2">
       Crear Cuenta
     </button>
