--- a/src/app/comics/subir-comics/subir-comics.component.html
+++ b/src/app/comics/subir-comics/subir-comics.component.html
@@ -79,7 +79,7 @@
 
     <img src="" alt="" id="imgPreview" class="img-thumbnail d-none" />
     <p class="text-danger" id="errorInfo"></p>
-    <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button"
+    <a class="btn btn-secondary" [routerLink]="['/comics']" role="button"
       >Volver</a
     >
     <button
