--- a/src/app/comics/comics/comics.component.html
+++ b/src/app/comics/comics/comics.component.html
@@ -1,1 +1,7 @@
-<p>comics works!2</p>
+
+<div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
+
+<app-comic-item [comic]="comic" class="col" *ngFor="let comic of comics"> </app-comic-item>
+
+</div>
+
