--- a/src/app/users/perfil/perfil/perfil.component.html
+++ b/src/app/users/perfil/perfil/perfil.component.html
@@ -16,12 +16,14 @@
               />
             </div>
             <div class="ms-3" style="margin-top: 130px">
-              <h5>{{ user.nombre }}</h5>
+
+              <h5> Usuario: {{ user.nombre }}</h5>
             </div>
           </div>
           <div class="p-4 text-black" style="background-color: #f8f9fa"></div>
           <div class="d-flex justify-content-end text-center py-1">
-            <div>
+
+            <div >
               <button
                 type="button"
                 class="btn btn-outline-dark"
@@ -35,6 +37,7 @@
                 Editar perfil
               </button>
             </div>
+
             <div class="px-3">
               <button
                 type="button"
@@ -43,7 +46,7 @@
                 style="z-index: 1"
                 (click)="goBack()"
               >
-                Back
+                Volver
               </button>
             </div>
           </div>
