--- a/src/app/auth/auth-register/auth-register.component.html
+++ b/src/app/auth/auth-register/auth-register.component.html
@@ -40,6 +40,7 @@
         name="imagen"
       />
       <div class="invalid-feedback">Imagen Falla</div>
+      <div class="valid-feedback">Imagen guardada</div>
     </div>
     <div *ngIf="previsualizacion">
       <img [src]="previsualizacion" width="400px" />
