--- a/src/app/comics/comic-details/comic-details.component.html
+++ b/src/app/comics/comic-details/comic-details.component.html
@@ -24,7 +24,7 @@
             [src]="comic.portada"
             alt="Generic placeholder image"
             class="rounded mx-auto d-block mt-4 border "
-            style=""
+            style="width: 60% ; height: 60%;"
           />
         </div>
         <div class="col-md-12 pt-2">
@@ -40,50 +40,33 @@
   <div class="container">
     <div class="row ">
       <div class="bg-dark bg-gradient text-white py-5 " id="chapters-list">
-        <h3 ><strong >Capítulos :</strong></h3>
+        <h3 ><strong >Capítulos : </strong></h3>
 
-        <div class="chapter-list-wrapper border-top pt-2">
-          <ul class="list-unstyled">
-            <li class="pl-1 d-flex">
-              <a
-                href=""
-                class="text-overflow link-light text-decoration-none"
-                title="377: "
-              >
-                Capítulo 377
-                <small>: tomermenta d eflores </small>
-              </a>
-            </li>
-            <li class="pl-1 d-flex">
-              <a
-                href=""
-                class="text-overflow link-light text-decoration-none"
-                title="377: "
-              >
-                Capítulo 377
-                <small>: tomermenta d eflores </small>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <app-capitulo-item [capitulo]="capitulo" class="col" *ngFor="let capitulo of capitulos "> </app-capitulo-item>
+
       </div>
     </div>
 
-    <div class="container">
+    <div class="container"  *ngIf="admin == true">
+
+
       <form
         action="#"
-        #ComicForm="ngForm"
+        #CapituloForm="ngForm"
         id="form-register"
         class="mt-4"
         method="POST"
         (ngSubmit)="subirCapitulos()"
         role="form"
       >
-        <div class="mb-3">
-          <label for="nombre">Titulo Capitulos:</label>
+
+        <div class="mb-3 text-dark">
+
+          <label for="nombre">Titulo del capitulo:</label>
+
           <input
             type="text"
-            [(ngModel)]="capitulos.titulo"
+            [(ngModel)]="capitulo.titulo"
             #nameModel="ngModel"
             class="form-control"
             id="titulo"
@@ -93,23 +76,25 @@
             required
           />
           <div class="invalid-feedback">Se requiere titulo</div>
+
         </div>
 
-        <div class="mb-3">
-          <label for="`portada"> Carpeta de imagenes:</label>
+        <div class="mb-3 text-dark">
+          <label for="imagenes"> Subir archivo:</label>
           <input
             (change)="capturarFile($event)"
             required
-            [(ngModel)]="capitulos.imagenes"
-            #portadaModel="ngModel"
-            [ngClass]="validClasses(portadaModel, 'is-valid', 'is-invalid')"
+            [(ngModel)]="capitulo.imagenes"
+            #imagenesModel="ngModel"
+            [ngClass]="validClasses(imagenesModel, 'is-valid', 'is-invalid')"
             type="file"
             required
             class="form-control"
-            id="portada"
-            name="portada"
+            id="imagenes"
+            name="imagenes"
           />
-          <div class="invalid-feedback">Carpetas de imagenes Falla</div>
+          <div class="invalid-feedback">No se ha guardado la carpeta</div>
+          <div class="valid-feedback">Carpeta guardada</div>
         </div>
 
         <a class="btn btn-secondary" [routerLink]="['/comics']" role="button"
@@ -118,10 +103,10 @@
 
         <button
           type="submit"
-          [disabled]="ComicForm.invalid"
+          [disabled]="CapituloForm.invalid"
           class="btn btn-primary ms-2 "
         >
-          Crear Cuenta
+          Crear capitulo
         </button>
 
 
