--- a/src/app/comics/comic-item/comic-item.component.html
+++ b/src/app/comics/comic-item/comic-item.component.html
@@ -3,7 +3,7 @@
   <img class="card-img-top" src="http://localhost:8080/comics/img/{{comic.portada}}" />
   <div class="card-body">
 
-    <p class="card-text">{{ comic.descripcion }}</p>
+    <p class="card-text">Descripción: {{ comic.descripcion }}</p>
 
 
 
