--- a/src/app/comics/comics/comics.component.html
+++ b/src/app/comics/comics/comics.component.html
@@ -1,7 +1,14 @@
+<nav class="navbar navbar-light bg-light mt-4 p-2">
+  <form class="form mb-0 w-100">
+    <input class="form-control" type="text" name="Filtrar comics" [(ngModel)]="search" placeholder="Filtrar comics"
+      aria-label="Filtrar comics" />
+  </form>
+</nav>
+
 
 <div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
 
-<app-comic-item [comic]="comic" class="col" *ngFor="let comic of comics"> </app-comic-item>
+<app-comic-item [comic]="comic" class="col" *ngFor="let comic of comics | comicFilter: search"> </app-comic-item>
 
 </div>
 
