--- a/src/app/users/perfil/perfil/perfil.component.html
+++ b/src/app/users/perfil/perfil/perfil.component.html
@@ -1,11 +1,11 @@
 <section class="h-100 gradient-custom-2">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-lg-9 col-xl-7">
+      <div class="col-12 col-lg-12 col-xl-12">
         <div class="card">
           <div
             class="rounded-top text-white d-flex flex-row"
-            style="background-color: #000; height: 200px"
+            style="background-color: #000; height: 300px;"
           >
             <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px">
               <img
