--- a/src/app/comics/comics/comics.component.html
+++ b/src/app/comics/comics/comics.component.html
@@ -1,14 +1,34 @@
-<nav class="navbar navbar-light bg-light mt-4 p-2">
-  <form class="form mb-0 w-100">
-    <input class="form-control" type="text" name="Filtrar comics" [(ngModel)]="search" placeholder="Filtrar comics"
-      aria-label="Filtrar comics" />
-  </form>
-</nav>
+<div class="input-group w-100 ">
+  <span class="input-group-text" id="basic-addon1">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      class="bi bi-search"
+      viewBox="0 0 16 16"
+    >
+      <path
+        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+      ></path>
+    </svg>
+  </span>
+  <input
+    class="form-control"
+    type="text"
+    name="Filtrar comics"
+    [(ngModel)]="search"
+    placeholder="Filtrar comics"
+    aria-label="Filtrar comics"
+  />
+</div>
 
 
 <div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
-
-<app-comic-item [comic]="comic" class="col" *ngFor="let comic of comics | comicFilter: search"> </app-comic-item>
-
+  <app-comic-item
+    [comic]="comic"
+    class="col"
+    *ngFor="let comic of comics | comicFilter : search"
+  >
+  </app-comic-item>
 </div>
-
