--- a/src/app/users/perfil/perfil/perfil.component.html
+++ b/src/app/users/perfil/perfil/perfil.component.html
@@ -1,11 +1,11 @@
-<section class="h-100 gradient-custom-2">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
+<section class="gradient-custom-2">
+  <div class="container ">
+    <div class="row d-flex ">
       <div class="col-12 col-lg-12 col-xl-12">
         <div class="card">
           <div
-            class="rounded-top text-white d-flex flex-row"
-            style="background-color: #000; height: 300px;"
+            class="rounded-top text-white d-flex flex-row "
+            style="background-color: #000; height: 400px; "
           >
             <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px">
               <img
@@ -15,15 +15,15 @@
                 style="width: 150px; z-index: 1"
               />
             </div>
-            <div class="ms-3" style="margin-top: 130px">
+            <div class="ms-3" style="margin-top: 130px;">
 
               <h5> Usuario: {{ user.nombre }}</h5>
             </div>
           </div>
-          <div class="p-4 text-black" style="background-color: #f8f9fa"></div>
+          <div class="p-4 text-black " style="background-color: #f8f9fa"></div>
           <div class="d-flex justify-content-end text-center py-1">
 
-            <div >
+            <div  *ngIf="user.id == usuario || admin == true">
               <button
                 type="button"
                 class="btn btn-outline-dark"
@@ -33,7 +33,7 @@
                 data-target="#collapseExample"
                 aria-expanded="false"
                 aria-controls="collapseExample"
-                [routerLink]="['/auth/edit']" >
+                [routerLink]="['/auth/edit/'+ user.id]" >
                 Editar perfil
               </button>
             </div>
